@@ -35,6 +35,7 @@ This release also has several bugfixes related to --format and Before/Adter hook
 * Make sure script/generate cucumber --spork uses the cucumber Rails environment (Philippe Lafoucrière)
 
 === New Features
+* Cucumber now displays which profile, if any, is being used. (Ben Mabey)
 * New --format steps formatter. Variant of the usage formatter that lists available step definitions (Demetrius Nunes)
 * Possibility to specify scenario language as part of the .feature file (#345 Aslak Hellesøy)
 * Support specifying environment variables using foo=bar syntax on command line or in profiles (#362 Bryan Helmkamp)
